# vkf

./: .gitignore  README.md  pyproject.toml
docs/: create_app.md  developers.md
static/: vk_redirect.html
tests/: test_auth.py  test_serializers.py
vkf/: __main__.py  api.py  auth.js  auth.py  cli.py  config.py  models.py
vkf/serializers/: base.py  csv.py  json.py  tsv.py
