[tool.poetry]
name = "vkf"
version = "0.1.0"
description = ""
authors = ["Saegl <saegl@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fire = "^0.5.0"
pydantic = "^1.10.5"
httpx = "^0.23.3"

[tool.poetry.scripts]
vkf = "vkf.__main__:_main"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
mypy = "^1.1.1"
pre-commit = "^3.1.1"
ruff = "^0.0.254"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
